sorta works now
Took 1 hour 13 minutes