@@ -1,6 +1,7 @@
 package me.paypur.tconjei.jei;
 
 import net.minecraft.core.Registry;
+import net.minecraft.resources.RegistryLoader;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
@@ -8,9 +9,15 @@ import slimeknights.mantle.util.RegistryHelper;
 import slimeknights.tconstruct.common.TinkerTags;
 import slimeknights.tconstruct.library.materials.MaterialRegistry;
 import slimeknights.tconstruct.library.materials.definition.Material;
+import slimeknights.tconstruct.library.tools.definition.ToolDefinition;
 import slimeknights.tconstruct.library.tools.definition.ToolDefinitionLoader;
+import slimeknights.tconstruct.library.tools.layout.StationSlotLayout;
+import slimeknights.tconstruct.library.tools.layout.StationSlotLayoutLoader;
 import slimeknights.tconstruct.library.tools.part.IToolPart;
 
+import slimeknights.tconstruct.tools.TinkerTools;
+
+import java.util.Collections;
 import java.util.List;
 import java.util.stream.Collectors;
 
@@ -21,27 +28,32 @@ public record ToolPartWrapper(IToolPart toolPart) {
             .map(material -> (Material) material)
             .filter(material -> !material.isHidden())
             .collect(Collectors.toList());
-//            .filter(material -> material.toString().equals("Material{tconstruct:iron}"))
-//            .findFirst()
-//            .get();
-
 
     public List<ItemStack> getToolParts() {
         return MATERIALS.stream()
-                        .filter(toolPart::canUseMaterial)
-                        .map(material -> toolPart.withMaterial(material.getIdentifier()))
-                        .collect(Collectors.toList());
+            .filter(toolPart::canUseMaterial)
+            .map(material -> toolPart.withMaterial(material.getIdentifier()))
+            .toList();
     }
 
-    public List<ResourceLocation> getCraftableTools() {
-        return ToolDefinitionLoader.getInstance().getRegisteredToolDefinitions()
+    public List<ItemStack> getCraftableTools() {
+        // AbstractToolDefinitionDataProvider
+        List<ResourceLocation> toolResourceLocations = ToolDefinitionLoader.getInstance().getRegisteredToolDefinitions()
             .stream()
             .filter(tool -> tool.getData()
+                    // match tool part to every tool it is used in
                     .getParts()
                     .stream()
                     .anyMatch(part -> part.matches((Item) toolPart)))
-            .map(toolDefinition -> toolDefinition.getId())
-            .collect(Collectors.toList());
+            .map(ToolDefinition::getId)
+            .toList();
+
+        List<ItemStack> toolIcons = toolResourceLocations.stream()
+            .map(StationSlotLayoutLoader.getInstance()::get)
+            .map(layout ->  layout.getIcon().getValue(ItemStack.class))
+            .toList();
+
+        return toolIcons;
     }
 
 }
